objects/Mailing_List_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores default information for the mailing list project. (CR-1297)</description>
    <fields>
        <fullName>PO_After_Hours_Cell__c</fullName>
        <description>(CR-1297)</description>
        <inlineHelpText>PO After Hours Cell that will appear on the Purchase Order generated for a Mailing Campaign.</inlineHelpText>
        <label>PO After Hours Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PO_Contact_Name__c</fullName>
        <description>(CR-1297)</description>
        <inlineHelpText>Contact Name that will appear on the Purchase Order generated for a Mailing Campaign.</inlineHelpText>
        <label>PO Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Phone__c</fullName>
        <description>(CR-1297)</description>
        <inlineHelpText>PO Phone that will appear on the Purchase Order generated for a Mailing Campaign.</inlineHelpText>
        <label>PO Phone</label>
        <type>Phone</type>
    </fields>
    <label>Mailing List Settings</label>
</CustomObject>